# system_monitor_SSR

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
agent/: Cargo.toml
agent/src/: main.rs
backend/: Cargo.toml
backend/src/: ai.rs  handlers.rs  main.rs  seeder.rs  state.rs
docker/: Dockerfile.backend
migrations/: 20260120210807_initial_setup.sql  20260121011856_create_projects_table.sql  20260121122740_create_messages_table.sql  20260121131621_add_gpu_metrics.sql  20260121133259_create_knowledge_base.sql
shared/: Cargo.toml
shared/src/: lib.rs
static/: monitor.js  portfolio.js  style.css
templates/: about.html  base.html  contact.html  index.html  monitor.html  resume.html
