# system_monitor/Cargo.toml
[workspace]
resolver = "2"

members = [
    "backend",
    "agent",
    "shared",
]

# OPTIONAL: You can centralize versions here so all sub-projects use the same ones.
# This prevents "dependency hell" where the backend uses Serde 1.0.1 and agent uses 1.0.2.
[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
monitor_shared = { path = "./shared" }