# agent/Cargo.toml
[package]
name = "monitor_agent"
version = "0.1.0"
edition = "2021"

[dependencies]

reqwest = { version = "0.13.1", features = ["json"] }
chrono = { workspace = true }
hostname = { workspace = true }

sysinfo = "0.37.2"
nvml-wrapper = "0.11"

tokio = { workspace = true }
serde = { workspace = true }

monitor_shared = { workspace = true }