# backend/Cargo.toml
[package]
name = "monitor_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tera = "1"
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
monitor_shared = { workspace = true }
dotenvy = "0.15.7"
futures = "0.3.31"
async-stream = "0.3.6"
lettre = "0.11"
pgvector = { version = "0.4.1", features = ["sqlx"] }
fastembed = "5.8.1"
reqwest = { version = "0.13.1", features = ["json"] }